Add repository and service tests for the auth module